# beholder

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
beholder/: __init__.py  __main__.py
beholder/common/: formatter.py
beholder/facade/: dashboard_facade.py
beholder/service/: cpu_info_service.py  info_service.py  memory_info_service.py  network_info_service.py  service_info_service.py  storage_info_service.py  system_info_service.py  temperature_info_service.py
beholder/static/css/: beholder.css  bootstrap.dark.min.css  bootstrap.light.min.css
beholder/static/js/: beholder.js
beholder/templates/: dashboard.html  index.html
beholder/templates/widget/: cpu_info.html  mem_info.html  network_info.html  services_info.html  storage_info.html  sys_info.html  temperature_info.html
tests/common/: test_formatter.py
tests/facade/: test_dashboard_facade.py
tests/service/: test_cpu_info_service.py  test_memory_info_service.py  test_network_info_service.py  test_service_info.py  test_storage_info_service.py  test_system_info_service.py  test_temperature_info_service.py
